--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^10.0.4"
   },
